src/objects/Position__c.object
<CustomObject>
    <description>This object stores information about the open job positions at our company.</description>
    <fields>
        <fullName>Close_date__c</fullName>
        <label>Close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF( ISBLANK( Close_date__c ),   TODAY() -  Open_Date__c ,  Close_date__c -  Open_Date__c )</formula>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_Requirement__c</fullName>
        <label>Educational Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funtional_Area__c</fullName>
        <label>Funtional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <defaultValue>TODAY() + 90</defaultValue>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <picklist>
            <controllingField>Funtional_Area__c</controllingField>
            <picklistValues>
                <fullName>FN-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Programming_Skills__c</fullName>
        <label>Programming Skills</label>
        <picklist>
            <picklistValues>
                <fullName>JAVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQL</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Responsibilties__c</fullName>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Position</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>IT_Positions</fullName>
        <active>true</active>
        <label>IT Positions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Positions</fullName>
        <active>true</active>
        <label>Standard Positions</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>